Fixed #12 of button not showing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -327,7 +327,7 @@ div#content {
 }
 
 @media (max-width: 40rem) {
-    header button#show-aside-button {
+    #pageheader button#show-aside-button {
         display: inline;
     }
 
